--- a/webgl/html/final.html
+++ b/webgl/html/final.html
@@ -36,7 +36,7 @@
     </main>
   </div>
   <footer>
-    <p><a href="/index.html" class="foot">目次へ戻る</a><br>
+    <p><a href="../index.html" class="foot">目次へ戻る</a><br>
       Chiba Institute of Technology NS B3 nkgw-marronnier(1832099) 2020</p>
   </footer>
   <script src="/webgl/script/stats.js"></script>
