--- a/webgl/html/final.html
+++ b/webgl/html/final.html
@@ -4,12 +4,12 @@
 <head>
   <meta charset="UTF-8">
   <title>WebGL最終課題</title>
-  <link rel="icon" href="/nkgw-marronnier.ico">
-  <link rel="stylesheet" href="/css/styles.css">
+  <link rel="icon" href="/ComputerGraphicsCIT/nkgw-marronnier.ico">
+  <link rel="stylesheet" href="/ComputerGraphicsCIT/css/styles.css">
   <meta name="format-detection" content="telephone=no">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/99/three.min.js"></script>
-  <script src="/webgl/script/OrbitControls.js"></script>
-  <script src="/webgl/script/VolumetricFire.js"></script>
+  <script src="/ComputerGraphicsCIT/webgl/script/OrbitControls.js"></script>
+  <script src="/ComputerGraphicsCIT/webgl/script/VolumetricFire.js"></script>
 </head>
 
 <body>
@@ -36,11 +36,11 @@
     </main>
   </div>
   <footer>
-    <p><a href="../index.html" class="foot">目次へ戻る</a><br>
+    <p><a href="/ComputerGraphicsCIT/index.html" class="foot">目次へ戻る</a><br>
       Chiba Institute of Technology NS B3 nkgw-marronnier(1832099) 2020</p>
   </footer>
-  <script src="/webgl/script/stats.js"></script>
-  <script src="/webgl/js/final.js"></script>
+  <script src="/ComputerGraphicsCIT/webgl/script/stats.js"></script>
+  <script src="/ComputerGraphicsCIT/webgl/js/final.js"></script>
 </body>
 
 </html>
