--- a/webgl/html/webgl2-2.html
+++ b/webgl/html/webgl2-2.html
@@ -3,8 +3,8 @@
 
 <head>
   <meta charset="UTF-8">
-  <link rel="icon" href="/nkgw-marronnier.ico">
-  <link rel="stylesheet" href="/css/styles.css">
+  <link rel="icon" href="/ComputerGraphicsCIT/nkgw-marronnier.ico">
+  <link rel="stylesheet" href="/ComputerGraphicsCIT/css/styles.css">
   <meta name="format-detection" content="telephone=no">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/99/three.min.js"></script>
   <title>WebGL第2回提出課題2</title>
@@ -31,10 +31,10 @@
     </main>
   </div>
   <footer>
-    <p><a href="/index.html" class="foot">目次へ戻る</a><br>
+    <p><a href="/ComputerGraphicsCIT/index.html" class="foot">目次へ戻る</a><br>
       Chiba Institute of Technology NS B3 nkgw-marronnier(1832099) 2020</p>
   </footer>
-  <script src="/webgl/js/webgl2-2.js"></script>
+  <script src="/ComputerGraphicsCIT/webgl/js/webgl2-2.js"></script>
 </body>
 
 </html>
