--- a/maya/html/maya1.html
+++ b/maya/html/maya1.html
@@ -3,8 +3,8 @@
 
 <head>
   <meta charset="UTF-8">
-  <link rel="icon" href="/nkgw-marronnier.ico">
-  <link rel="stylesheet" href="/css/styles.css">
+  <link rel="icon" href="/ComputerGraphicsCIT/nkgw-marronnier.ico">
+  <link rel="stylesheet" href="/ComputerGraphicsCIT/css/styles.css">
   <meta name="format-detection" content="telephone=no">
   <title>Maya第1回提出課題</title>
 </head>
@@ -14,7 +14,7 @@
   <h3>CIT　情報科学部　情報ネットワーク学科　3年　学生番号：1832099</h3>
   <div class="wrapper">
     <main>
-      <img src="/maya/rendering/maya1.jpg" alt="クマと図形" title="熊と図形" width="640" height="360">
+      <img src="/ComputerGraphicsCIT/maya/rendering/maya1.jpg" alt="クマと図形" title="熊と図形" width="640" height="360">
       <br>
       <br>
       <h4>提出課題の説明など</h4>
@@ -27,7 +27,7 @@
     </main>
   </div>
   <footer>
-    <p><a href="/index.html" class="foot">目次へ戻る</a><br>
+    <p><a href="/ComputerGraphicsCIT/index.html" class="foot">目次へ戻る</a><br>
       Chiba Institute of Technology NS B3 nkgw-marronnier(1832099) 2020</p>
   </footer>
 </body>
