--- a/webgl/html/final.html
+++ b/webgl/html/final.html
@@ -30,7 +30,7 @@
       </details><br>
       <details class="github">
         <summary>この課題のプログラム</summary>
-        <a href="https://github.com/nkgw-marronnier/nkgw-marronnier.github.io/blob/master/webgl/js/final.js"
+        <a href="https://github.com/nkgw-marronnier/ComputerGraphicsCIT/blob/master/webgl/js/final.js"
           target="_blank" rel="noopener" class="github">->GitHub(nkgw-marronnier) [公開期間:2020/07/20~2020/08/30]</a><br>
       </details><br>
     </main>
