--- a/webgl/html/webgl1.html
+++ b/webgl/html/webgl1.html
@@ -24,7 +24,7 @@
       <br>
       <details class="github">
         <summary>この課題のプログラム内容</summary>
-        <a href="https://github.com/nkgw-marronnier/nkgw-marronnier.github.io/blob/master/webgl/js/webgl1.js"
+        <a href="https://github.com/nkgw-marronnier/ComputerGraphicsCIT/blob/master/webgl/js/webgl1.js"
           target="_blank" rel="noopener" class="github">->GitHub(nkgw-marronnier) [公開期間:2020/07/20~2020/08/30]</a><br>
       </details>
       <br>
