--- a/webgl/html/webgl2-2.html
+++ b/webgl/html/webgl2-2.html
@@ -25,7 +25,7 @@
       <details class="github">
         <summary>この課題のプログラム内容</summary>
         <a href="https://github.com/nkgw-marronnier/ComputerGraphicsCIT/blob/master/webgl/js/webgl2-2.js"
-          target="_blank" rel="noopener" class="github">->GitHub(nkgw-marronnier) [公開期間:2020/07/20~2020/08/30]</a><br>
+          target="_blank" rel="noopener" class="github">->GitHub(nkgw-marronnier) [webgl2-2.js]</a><br>
       </details>
       <br>
     </main>
