--- a/webgl/html/final.html
+++ b/webgl/html/final.html
@@ -31,7 +31,7 @@
       <details class="github">
         <summary>この課題のプログラム</summary>
         <a href="https://github.com/nkgw-marronnier/ComputerGraphicsCIT/blob/master/webgl/js/final.js"
-          target="_blank" rel="noopener" class="github">->GitHub(nkgw-marronnier) [公開期間:2020/07/20~2020/08/30]</a><br>
+          target="_blank" rel="noopener" class="github">->GitHub(nkgw-marronnier) [final.js]</a><br>
       </details><br>
     </main>
   </div>
