--- a/webgl/html/final.html
+++ b/webgl/html/final.html
@@ -30,8 +30,8 @@
       </details><br>
       <details class="github">
         <summary>この課題のプログラム</summary>
-        <a href="https://github.com/nkgw-marronnier/ComputerGraphicsCIT/blob/master/webgl/js/final.js"
-          target="_blank" rel="noopener" class="github">->GitHub(nkgw-marronnier) [final.js]</a><br>
+        <a href="https://github.com/nkgw-marronnier/ComputerGraphicsCIT/blob/master/webgl/js/final.js" target="_blank"
+          rel="noopener" class="github">->GitHub(nkgw-marronnier) [final.js]</a><br>
       </details><br>
     </main>
   </div>
