--- a/webgl/html/webgl1.html
+++ b/webgl/html/webgl1.html
@@ -24,8 +24,8 @@
       <br>
       <details class="github">
         <summary>この課題のプログラム内容</summary>
-        <a href="https://github.com/nkgw-marronnier/ComputerGraphicsCIT/blob/master/webgl/js/webgl1.js"
-          target="_blank" rel="noopener" class="github">->GitHub(nkgw-marronnier) [webgl1.js]</a><br>
+        <a href="https://github.com/nkgw-marronnier/ComputerGraphicsCIT/blob/master/webgl/js/webgl1.js" target="_blank"
+          rel="noopener" class="github">->GitHub(nkgw-marronnier) [webgl1.js]</a><br>
       </details>
       <br>
     </main>
