--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>CG提出課題一覧</title>
-    <link rel="icon" href="/ComupterGraphicsCIT/nkgw-marronnier.ico">
+    <link rel="icon" href="nkgw-marronnier.ico">
     <link rel="stylesheet" href="css/styles.css">
     <meta name="format-detection" content="telephone=no">
 </head>
